--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <meta name="viewport" 
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-  <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <title>Hello, World!</title>
 </head>
 <body>
   <div id="container">
     <div id="menu">
-      <span onclick="kclose()">&times;</span>
+      <span onclick="kclose()">&times;
+</span>
     </div>
     <header>
       <ul>
